--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "q"
+name = "quiz_service"
 version = "0.1.0"
 description = ""
 authors = [
@@ -16,7 +16,12 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi (>=0.53b1,<0.54)",
     "opentelemetry-instrumentation-asgi (>=0.53b1,<0.54)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
+    "alembic (>=1.15.2,<2.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "dependency-injector (>=4.46.0,<5.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 [tool.poetry]
