--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "alembic (>=1.15.2,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "dependency-injector (>=4.46.0,<5.0.0)",
-    "aiosqlite (>=0.21.0,<0.22.0)"
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "orjson (>=3.10.18,<4.0.0)"
 ]
 
 [tool.poetry]
