--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -19,6 +19,8 @@ watchdog = "^6.0.0"
 aiohttp = "^3.11.18"
 loguru = "0.6"
 python-dotenv = "^1.1.0"
+celery = "^5.5.2"
+redis = "^6.0.0"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
