--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "KamranYsupov",email = "kamrankek48@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 
 [tool.poetry]
 packages = [{include = "q", from = "src"}]
@@ -21,6 +21,9 @@ loguru = "0.6"
 python-dotenv = "^1.1.0"
 celery = "^5.5.2"
 redis = "^6.0.0"
+opentelemetry-api = "^1.33.0"
+opentelemetry-sdk = "^1.33.0"
+opentelemetry-exporter-jaeger = "^1.21.0"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
