--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "KamranYsupov",email = "kamrankek48@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
@@ -22,7 +22,8 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "dependency-injector (>=4.46.0,<5.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "orjson (>=3.10.18,<4.0.0)"
+    "orjson (>=3.10.18,<4.0.0)",
+    "loguru (==0.6.0)"
 ]
 
 [tool.poetry]
