--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -24,6 +24,7 @@ redis = "^6.0.0"
 opentelemetry-api = "^1.32.0"
 opentelemetry-sdk = "^1.32.0"
 opentelemetry-exporter-jaeger = "^1.21.0"
+requests = "^2.32.3"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
